Bug fix - on iOS devices couldn't click anywhere to start animation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,7 @@ html, body {
 
 body {
   min-height: 100%;
+  cursor: pointer;
 }
 
 a, a:visited, a:active{
